Add icon to executable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,9 @@ if (NOT CMAKE_BUILD_TYPE)
 endif()
 
 if (MSVC)
-  message(INFO "You should see this!")
+  if (CMAKE_VERSION VERSION_GREATER_EQUAL 3.20)
+    set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PACKAGE_NAME})
+  endif (CMAKE_VERSION VERSION_GREATER_EQUAL 3.20)
   set(wxWidgets_USE_UNICODE ON)
   set(wxWidgets_USE_UNIVERSAL OFF)
   set(wxWidgets_USE_STATIC BOOL::ON)
@@ -37,7 +39,7 @@ include(${wxWidgets_USE_FILE})
 
 # Add the source files
 if (MSVC)
-  add_executable (${PACKAGE_NAME} WIN32 main.cpp)
+  add_executable (${PACKAGE_NAME} WIN32 main.cpp ${PACKAGE_NAME}.rc)
   set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${PACKAGE_NAME})
 else (MSVC)
   message(WARNING "You should not see this.")
