Use C++11 rules Quieten CI build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ set(PROJECT_VER_MINOR 0)
 set(PROJECT_VER_MAJOR 1)
 
 set(PROJECT_VER "${PROJECT_VER_MAJOR}.${PROJECT_VER_MINOR}.${PROJECT_VER_PATCH}")
+message(STATUS "Building version ${PROJECT_VER}")
+
+set(CMAKE_CXX_STANDARD 11)
+message(STATUS "Setting C++11 standard via cmake standard mechanism")
 
 # guard against bad build-type strings
 
