--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -28,7 +28,7 @@ jobs:
           - name: Windows VS 2022
             runner: windows-2022
     env:
-      CLOUDSMITH_API_KEY: ${{ secrets.CLOUDSMITH_API_KEY }}
+      CLOUDSMITH_API_KEY: ${{ vars.CLOUDSMITH_API_KEY }}
 
     # Use bash as the shell, even under MSW where the default is PowerShell.
     defaults:
@@ -49,5 +49,5 @@ jobs:
 
       - name: "Dependencies, configure, build, deploy"
         shell: cmd
-        run: .\appveyor.bat
+        run: .\github_build.bat
 
