--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -44,12 +44,16 @@ jobs:
       - name: "Set up MSVC Developer Command Prompt"
         uses: seanmiddleditch/gha-setup-vsdevenv@v5
         with:
-          host_arch: x86
-          arch: win32
+          arch: amd64
 
       - name: "Dependencies, configure, build"
         shell: cmd
         run: .\github_build.bat
+
+      - name: "Run CLI smoke tests"
+        shell: cmd
+        run: |
+          "%GITHUB_WORKSPACE%\test_win.bat"
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
