--- a/.github/workflows/windows.yaml
+++ b/.github/workflows/windows.yaml
@@ -50,10 +50,17 @@ jobs:
         shell: cmd
         run: .\github_build.bat
 
-      - name: "Run CLI smoke tests"
-        shell: cmd
+      - name: Run CLI smoke tests with timeout
+        shell: pwsh
         run: |
-          "%GITHUB_WORKSPACE%\test_win.bat"
+          $process = Start-Process -FilePath "$env:GITHUB_WORKSPACE\test_win.bat" -PassThru
+          if ($process.WaitForExit(60000)) {
+            Write-Host "Process completed."
+          } else {
+            Write-Host "Timeout reached. Killing process."
+            $process.Kill()
+            exit 1
+          }
 
       - name: Archive production artifacts
         uses: actions/upload-artifact@v4
